# quaisr-block-tarfiles

./: addition.tar
addition/: Quaisr.toml  README.md  pyproject.toml  setup.cfg
addition/src/addition/: __main__.py  add.py
addition/tests/: test_add.py
