[metadata]
name = addition
version = 0.1.0
author = Roma Klapaukh
author_email = roma@quaisr.io
description = A quaisr block that performs addition between two numbers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quaisr/core
project_urls =
    Bug Tracker = https://github.com/quaisr/core/issues
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = true
package_dir =
    = src
python_requires = >=3.8,<4.0
install_requires =
    quaisr
    pytest
    black

[options.package_data]
"addition" = "py.typed"